Fix: overflow on mobile

--- a/themes/jacobmilligan/src/scss/_reset.scss
+++ b/themes/jacobmilligan/src/scss/_reset.scss
@@ -3,19 +3,21 @@ $footer-height: 75px;
 html {
     position: relative;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    position: relative;
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     font-family: $default-font;
-    overflow-x: hidden;
     color: $color-black;
-    margin-bottom: $footer-height * 1.5;
 }
 
 #bodyWrapper {
     overflow: hidden;
+    margin-bottom: $footer-height * 1.5;
 }
